--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -36,7 +36,7 @@
             <Button x:Name="CurrentOrderButton" Content="Текущий заказ" Grid.Column="1" Grid.Row="5" Margin="0, 18, 0, 18"/>
         </Grid>
 
-        <Grid x:Name="BookingGrid" Visibility="Visible" Grid.Column ="1">
+        <Grid x:Name="BookingGrid" Visibility="Hidden" Grid.Column ="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75*"/>
                 <ColumnDefinition Width="25*"/>
@@ -78,44 +78,70 @@
             <Label>Text in first grid</Label>
         </Grid>
 
-        <Grid x:Name="ProductsGrid" Grid.Column ="1">
+        <Grid x:Name="ProductsGrid" Visibility="Hidden" Grid.Column ="1">
 
         </Grid>
 
-        <Grid x:Name="ClientsGrid" Grid.Column ="1">
+        <Grid x:Name="ClientsGrid" Visibility="Hidden" Grid.Column ="1">
 
         </Grid>
 
-        <Grid x:Name="OrderHistoryGrid" Grid.Column ="1">
+        <Grid x:Name="OrderHistoryGrid" Visibility="Hidden" Grid.Column ="1">
 
         </Grid>
 
-        <Grid x:Name="CurrentOrderGrid" Grid.Column ="1">
+        <Grid x:Name="CurrentOrderGrid" Visibility="Visible" Grid.Column ="1">
+            <Grid x:Name="RightOrderGrid" Grid.Column ="2" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="200" Margin="0,0,-600,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="15*"/>
+                    <ColumnDefinition Width="70*"/>
+                    <ColumnDefinition Width="15*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+
+                <ListBox x:Name="CurrentOrderListbox" d:ItemsSource="{d:SampleData ItemCount=5}" Width="600" Margin="-600,0,30,0" Grid.RowSpan="8"/>
+
+                <Button x:Name="AcceptOrder" Content="Оформить заказ" Grid.Column="1" Grid.Row="5" Margin="0, 15, 0, 15" Height="47"/>
+                <Button x:Name="DeleteOrder" Content="Удалить из заказа" Grid.Column="1" Grid.Row="5" Margin="0,80,0,-60" Height="47"/>
+
+            </Grid>
 
         </Grid>
 
 
 
-        <Grid x:Name="MiniOfficeInsertGrid" Grid.Column ="1">
+        <Grid x:Name="MiniOfficeInsertGrid" Visibility="Hidden" Grid.Column ="1">
 
         </Grid>
 
-        <Grid x:Name="ConferenceRoomInsertGrid" Grid.Column ="1">
+        <Grid x:Name="ConferenceRoomInsertGrid" Visibility="Hidden" Grid.Column ="1">
 
         </Grid>
 
-        <Grid x:Name="MeetingRoomInsertGrid" Grid.Column ="1">
+        <Grid x:Name="MeetingRoomInsertGrid" Visibility="Hidden" Grid.Column ="1">
 
         </Grid>
 
-        <Grid x:Name="PlaceInsertGrid" Grid.Column ="1">
+        <Grid x:Name="PlaceInsertGrid" Visibility="Hidden" Grid.Column ="1">
 
         </Grid>
 
-        <Grid x:Name="ComputersInsertGrid" Grid.Column ="1">
+        <Grid x:Name="ComputersInsertGrid" Visibility="Hidden" Grid.Column ="1">
 
         </Grid>
 
-        <Grid x:Name="ProductsInsertGrid" Grid.Column ="1"/>
+        <Grid x:Name="ProductsInsertGrid" Visibility="Hidden" Grid.Column ="1">
+        </Grid>
     </Grid>
 </Window>
