--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -115,7 +115,10 @@
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Text="{Binding Name}"></TextBlock>
+                            <TextBlock Text=" "></TextBlock>
                             <TextBlock Text="{Binding Type}"></TextBlock>
+                            <TextBlock Text=" "></TextBlock>
+                            <TextBlock Text="{Binding Price}"></TextBlock>
                         </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
