--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CoCoworkView"
         mc:Ignorable="d"
-        Title="Коворк под контролем" Height="600" Width="1000" Background="#FFB7BBC2">
+        Title="Коворк под контролем" Height="600"  Width="1000" Background="#FFB7BBC2">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20*"/>
@@ -59,8 +59,13 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
+                <Label Content="Показать свободные" Grid.Column="1" Grid.Row="0"/>
+                <Label Content="с" Grid.Column="0" Grid.Row="0" Margin="12 25 0 0"/>
+                <DatePicker Grid.Column="1" Grid.Row="0" Margin="0 25 0 25"/>
+                <Label Content="по" Grid.Column="0" Grid.Row="0" Margin="5 50 0 0"/>
+                <DatePicker Grid.Column="1" Grid.Row="0" Margin="0 50 0 0"/>
 
-                <Button x:Name="AddNewButton" Content="Инсертнуть" Grid.Column="1" Grid.Row="1" Margin="0, 15, 0, 15"/>
+                <Button x:Name="AddNewButton" Content="Инсертнуть" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
 
                 <StackPanel x:Name="CheckStackPanel" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="0, 20, 0, 10">
                     <CheckBox Content="Места" Margin="0, 5, 0, 0"/>
@@ -85,13 +90,13 @@
                     </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Тип" Width="*"/>
-                    <DataGridTextColumn Header="Кол-во мест"  Width="80"/>
-                    <DataGridTextColumn Header="Цена за день"  Width="*"/>
-                    <DataGridTextColumn Header="Фикс цена за день"  Width="110"/>
-                    <DataGridTextColumn Header="Цена за месяц"  Width="90"/>
-                    <DataGridTextColumn Header="Вместимость"  Width="*"/>
-                    <DataGridTextColumn Header="Описание"  Width="70"/>
+                    <DataGridTextColumn Header=" Тип" Width="*"/>
+                    <DataGridTextColumn Header=" Кол-во мест"  Width="80"/>
+                    <DataGridTextColumn Header=" Цена за день"  Width="90"/>
+                    <DataGridTextColumn Header=" Фикс цена за день"  Width="110"/>
+                    <DataGridTextColumn Header=" Цена за месяц"  Width="90"/>
+                    <DataGridTextColumn Header=" Вместимость"  Width="80"/>
+                    <DataGridTextColumn Header=" Описание"  Width="*"/>
 
 
                 </DataGrid.Columns>
