--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -61,9 +61,9 @@
                 </Grid.RowDefinitions>
                 <Label Content="Показать свободные" Grid.Column="1" Grid.Row="0"/>
                 <Label Content="с" Grid.Column="0" Grid.Row="0" Margin="12 25 0 0"/>
-                <DatePicker Grid.Column="1" Grid.Row="0" Margin="0 25 0 25"/>
-                <Label Content="по" Grid.Column="0" Grid.Row="0" Margin="5 50 0 0"/>
-                <DatePicker Grid.Column="1" Grid.Row="0" Margin="0 50 0 0"/>
+                <DatePicker Grid.Column="1" Grid.Row="0" Margin="0 25 0 20"/>
+                <Label Content="по" Grid.Column="0" Grid.Row="0" Margin="5 50 0 0" Grid.RowSpan="2"/>
+                <DatePicker Grid.Column="1" Grid.Row="0" Margin="0 50 0 65" Grid.RowSpan="2"/>
 
                 <Button x:Name="AddNewButton" Content="Инсертнуть" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
 
@@ -80,11 +80,10 @@
 
             </Grid>
 
-            <DataGrid AutoGenerateColumns="False" CanUserAddRows="False">
+            <DataGrid AutoGenerateColumns="False" CanUserAddRows="False" >
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="Background" Value="CornflowerBlue"/>
-                        <Setter Property="FontWeight" Value="SemiBold"/>
                         <Setter Property="BorderThickness" Value="0, 0, 1, 2"/>
                         <Setter Property="BorderBrush" Value="Black"/>
                     </Style>
