--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CoCoworkView"
+        xmlns:local="clr-namespace:CoCoworkView" xmlns:local1="clr-namespace:CoCowork.UI.ViewModels"
         mc:Ignorable="d"
         Title="Коворк под контролем" Height="600"  Width="1000" Background="#FFB7BBC2">
     <Grid>
@@ -38,11 +38,22 @@
 
         <Grid x:Name="BookingGrid" Visibility="Visible" Grid.Column ="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="75*"/>
+                <ColumnDefinition Width="25*"/>
+                <ColumnDefinition Width="25*"/>
+                <ColumnDefinition Width="25*"/>
                 <ColumnDefinition Width="25*"/>
             </Grid.ColumnDefinitions>
-
-            <Grid x:Name="RightBoookingGrid" Grid.Column ="2" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="25"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            
+            <Label Content="Места" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="0" Grid.Row="0"/>
+            <Label Content="Миниофисы" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="1" Grid.Row="0"/>
+            
+            <Grid x:Name="RightBoookingGrid" Grid.Column ="3" Grid.RowSpan="4" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="15*"/>
                     <ColumnDefinition Width="70*"/>
@@ -68,10 +79,10 @@
                 <Button x:Name="AddNewButton" Content="Инсертнуть" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
 
                 <StackPanel x:Name="CheckStackPanel" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="0, 20, 0, 10">
-                    <CheckBox Content="Места" Margin="0, 5, 0, 0"/>
-                    <CheckBox Content="Миниофисы" Margin="0, 5, 0, 0"/>
-                    <CheckBox Content="Конференц-залы" Margin="0, 5, 0, 0"/>
-                    <CheckBox Content="Переговорные" Margin="0, 5, 0, 0"/>
+                    <CheckBox Content="Место" Margin="0, 5, 0, 0"/>
+                    <CheckBox Content="Миниофис" Margin="0, 5, 0, 0"/>
+                    <CheckBox Content="Конференц-зал" Margin="0, 5, 0, 0"/>
+                    <CheckBox Content="Переговорная" Margin="0, 5, 0, 0"/>
                     <CheckBox Content="ПК" Margin="0, 5, 0, 0"/>
                 </StackPanel>
                 <Button x:Name="EditButton" Content="Редактировать" Grid.Column="1" Grid.Row="4" Margin="0, 15, 0, 15"/>
@@ -79,8 +90,7 @@
                 <Button x:Name="DeleteButton" Content="Удалить" Grid.Column="1" Grid.Row="6" Margin="0, 15, 0, 15"/>
 
             </Grid>
-
-            <DataGrid AutoGenerateColumns="False" CanUserAddRows="False" ItemsSource="{Binding Places}">
+            <DataGrid AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding Places}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="Background" Value="PaleTurquoise"/>
@@ -89,15 +99,25 @@
                     </Style>
                 </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header=" Тип" Width="*" Binding="{Binding Type}"/>
-                    <DataGridTextColumn Header=" Номер"  Width="45" Binding="{Binding Number}"/>
-                    <DataGridTextColumn Header=" Кол-во мест"  Width="75"/>
+                    <DataGridTextColumn Header=" Номер"  Width="30" Binding="{Binding Number}"/>
                     <DataGridTextColumn Header=" Цена за день"  Width="80" Binding="{Binding PricePerDay}"/>
                     <DataGridTextColumn Header=" Фикс цена за день"  Width="110" Binding="{Binding FixedPricePerDay}"/>
-                    <DataGridTextColumn Header=" Цена за месяц"  Width="90"/>
-                    <DataGridTextColumn Header=" Вместимость"  Width="77"/>
-                    <DataGridTextColumn Header=" Описание"  Width="*"/>
+                </DataGrid.Columns>
 
+            </DataGrid>
+
+            <DataGrid AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding Places}">
+                <DataGrid.Resources>
+                    <Style TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="Background" Value="PaleTurquoise"/>
+                        <Setter Property="BorderThickness" Value="0, 0, 0.5, 1.8"/>
+                        <Setter Property="BorderBrush" Value="Black"/>
+                    </Style>
+                </DataGrid.Resources>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header=" Номер"  Width="43" Binding="{Binding Number}"/>
+                    <DataGridTextColumn Header=" Цена/день"  Width="63" Binding="{Binding PricePerDay}"/>
+                    <DataGridTextColumn Header=" Фикс цена/день"  Width="*" Binding="{Binding FixedPricePerDay}"/>
 
                 </DataGrid.Columns>
                 
