--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -48,25 +48,27 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="26"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="26"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Label Content="Места" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="0" Grid.Row="0">
+            <Label Content="Места" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="1" Grid.Row="0">
 
             </Label>
-            <Label Content="Миниофисы" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="1" Grid.Row="0">
+            <Label Content="Миниофисы" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="0" Grid.Row="0">
 
             </Label>
-            <Label Content="Переговорные" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="2" Grid.Row="0">
+            <Label Content="Переговорные" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="0" Grid.Row="4">
 
             </Label>
             <Label Content="Конференц-залы" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="0" Grid.Row="2">
 
             </Label>
-            <Label Content="Компьютеры" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="1" Grid.Row="2">
+            <Label Content="Компьютеры" HorizontalAlignment="Center" FontWeight="Bold" Grid.Column="2" Grid.Row="0">
 
             </Label>
             
-            <Grid x:Name="RightBoookingGrid" Grid.Column ="3" Grid.RowSpan="4" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid x:Name="RightBoookingGrid" Grid.Column ="3" Grid.RowSpan="6" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="15*"/>
                     <ColumnDefinition Width="70*"/>
@@ -103,7 +105,7 @@
                 <Button x:Name="DeleteButton" Content="Удалить" Grid.Column="1" Grid.Row="6" Margin="0, 15, 0, 15"/>
             </Grid>
             
-            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="1" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding MiniOffices}">
+            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding MiniOffices}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -118,7 +120,7 @@
                 </DataGrid.Columns>
             </DataGrid>
             
-            <DataGrid AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding Places}">
+            <DataGrid AutoGenerateColumns="False" Grid.Column="1" Margin="2 0 2 0" Grid.Row="1" Grid.RowSpan="5" CanUserAddRows="False" ItemsSource="{Binding Places}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -133,7 +135,7 @@
                 </DataGrid.Columns>
             </DataGrid>
             
-            <DataGrid AutoGenerateColumns="False" Grid.Column="2" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding MeetingRooms}">
+            <DataGrid AutoGenerateColumns="False" Grid.Column="0" Grid.Row="5" CanUserAddRows="False" ItemsSource="{Binding MeetingRooms}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -149,7 +151,7 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="4" CanUserAddRows="False" ItemsSource="{Binding ConferenceRooms}">
+            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="3" CanUserAddRows="False" ItemsSource="{Binding ConferenceRooms}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -164,7 +166,7 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" HorizontalAlignment="Left" Width="220" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" CanUserAddRows="False" ItemsSource="{Binding Computers}">
+            <DataGrid AutoGenerateColumns="False" Margin="0 0 0 0" HorizontalAlignment="Left" Width="220" Grid.Column="2" Grid.RowSpan="5" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding Computers}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
