BaseRepository class was added

--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CoCoworkView" xmlns:local1="clr-namespace:CoCowork.UI.ViewModels"
         mc:Ignorable="d"
         Title="Коворк под контролем" Height="600"  Width="1000" Background="#FFB7BBC2">
     <Grid>
@@ -105,7 +104,8 @@
                 <Button x:Name="DeleteButton" Content="Удалить" Grid.Column="1" Grid.Row="6" Margin="0, 15, 0, 15"/>
             </Grid>
             
-            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="1" CanUserAddRows="False" ItemsSource="{Binding MiniOffices}">
+            <DataGrid AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="1"
+                      CanUserAddRows="False" ItemsSource="{Binding MiniOffices}" SelectedItem="{Binding SelectedItem}">
                 <DataGrid.Resources>
                     <Style TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
