--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -28,14 +28,14 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Button x:Name="BookingButton" Command="{Binding Booking.MakeBookingVisible}" Content="Аренда" Grid.Column="1" Grid.Row="1" Margin="0, 18, 0, 18"/>
+            <Button x:Name="BookingButton" Command="{Binding Booking.MakeBookingVisible}" CommandParameter="{Binding}" Content="Аренда" Grid.Column="1" Grid.Row="1" Margin="0, 18, 0, 18"/>
             <Button x:Name="ProductsButton" Command="{Binding Product.MakeProductVisible}" Content="Товары" Grid.Column="1" Grid.Row="2" Margin="0, 18, 0, 18"/>
             <Button x:Name="ClientsButton" Command="{Binding Client.MakeClientVisible}" Content="Клиенты" Grid.Column="1" Grid.Row="3" Margin="0, 18, 0, 18"/>
             <Button x:Name="OrderHistoryButton" Command="{Binding Order.MakeOrderVisible}" Content="История заказов" Grid.Column="1" Grid.Row="4" Margin="0, 18, 0, 18"/>
             <Button x:Name="CurrentOrderButton" Command="{Binding CurrentOrder.MakeCurrentOrderVisible}" Content="Текущий заказ" Grid.Column="1" Grid.Row="5" Margin="0, 18, 0, 18"/>
         </Grid>
 
-        <Grid x:Name="BookingGrid" Visibility="Visible" Grid.Column ="1">
+        <Grid x:Name="BookingGrid" Grid.Column ="1" Visibility="{Binding Booking.GridVisibility}" IsEnabled="{Binding Booking.IsGridActive}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75*"/>
                 <ColumnDefinition Width="25*"/>
@@ -74,26 +74,24 @@
 
             </Grid>
 
-            <Label>Text in first grid</Label>
+            <Label>Text in booking grid</Label>
         </Grid>
 
-        <Grid x:Name="ProductsGrid" Grid.Column ="1">
-
+        <Grid x:Name="ProductsGrid" Grid.Column ="1" Visibility="{Binding Product.GridVisibility}" IsEnabled="{Binding Product.IsGridActive}">
+            <Label>Text in products grid</Label>
         </Grid>
 
-        <Grid x:Name="ClientsGrid" Grid.Column ="1">
-
+        <Grid x:Name="ClientsGrid" Grid.Column ="1" Visibility="{Binding Client.GridVisibility}" IsEnabled="{Binding Client.IsGridActive}">
+            <Label>Text in client grid</Label>
         </Grid>
 
-        <Grid x:Name="OrderHistoryGrid" Grid.Column ="1">
-
+        <Grid x:Name="OrderHistoryGrid" Grid.Column ="1" Visibility="{Binding Order.GridVisibility}" IsEnabled="{Binding Order.IsGridActive}">
+            <Label>Text in order history grid</Label>
         </Grid>
 
-        <Grid x:Name="CurrentOrderGrid" Grid.Column ="1">
-
+        <Grid x:Name="CurrentOrderGrid" Grid.Column ="1" Visibility="{Binding CurrentOrder.GridVisibility}" IsEnabled="{Binding CurrentOrder.IsGridActive}">
+            <Label>Text in current order grid</Label>
         </Grid>
-
-
 
         <Grid x:Name="MiniOfficeInsertGrid" Grid.Column ="1">
 
